--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -3,56 +3,143 @@
 
 {% block content %}
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="{% static 'lang-logo.png'%}">
-    </a>
-    <h1>Getting Started with Python on Heroku</h1>
-    <p>This is a sample Python application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span> Getting Started with Python</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/python-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-python" class="alert-link">Getting Started with Python on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/python-getting-started">Heroku Button</a> on the repository.</li>
+<body id="page-top">
+    <!-- Masthead-->
+    <header class="p-3 mb-2 bg-dark text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+            <br/>
+            <img class="rounded" src="{% static 'rcworldd/images/raquel_profile_pic.png' %}" alt="" width="200" height="200" />
+            <!-- Masthead Heading-->
+            <h1 class="masthead-heading text-uppercase mb-0">Raquel Carrasquillo</h1>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- Masthead Subheading-->
+            <p class="masthead-subheading font-weight-light mb-0">Author - Photographer - Illustrator</p>
+        </div>
+    </header>
+    <!-- Portfolio Section-->
+    <hr class="my-4">
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
+    <div class="scroll-to-top d-lg-none position-fixed">
+        <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
+    </div>
+    
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Contact form JS-->
+    <script src="{% static 'rcworldd/assets/mail/contact_me.js' %}"></script>
+    <script src="{% static 'rcworldd/assets/mail/jqBootstrapValidation.js' %}"></script>
+    <!-- Core theme JS-->
+    <script src="{% static 'rcworldd/js/scripts.js' %}"></script>
+</body>
+</html>
 
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/python-getting-started/blob/main/Pipfile">Pipfile</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/python-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd python-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-python#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
+<div class="jumbotron">
+    <h1 class="display-4">Hello, and welcome to RCWorld!</h1>
+    <br/>
+    <h2 class="display-5">About Me</h2>
+    <hr class="my-4">
+    <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, 
+        diam nec euismod congue, nisi lorem tincidunt lacus, eu vestibulum diam ligula 
+        nec dui. Pellentesque habitant morbi tristique senectus et netus et malesuada 
+        fames ac turpis egestas. Morbi ac cursus nulla. Sed malesuada, nisi et sodales 
+        pretium, dui dolor dignissim leo, at hendrerit nisl orci non ligula. In egestas 
+        libero vel ullamcorper pulvinar. Nunc eu ipsum tortor. Vestibulum eget rhoncus 
+        quam, nec vehicula leo. Maecenas posuere nec lorem ac ullamcorper. In hac 
+        habitasse platea dictumst. Fusce aliquet semper est non dictum. Nam nisi massa, 
+        accumsan in pulvinar molestie, vehicula sed eros. Praesent iaculis, purus id 
+        efficitur pulvinar, arcu augue cursus metus, nec placerat dolor neque tristique 
+        ante. Vestibulum rhoncus volutpat tempor.
+    </p>
+    <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, 
+        diam nec euismod congue, nisi lorem tincidunt lacus, eu vestibulum diam ligula 
+        nec dui. Pellentesque habitant morbi tristique senectus et netus et malesuada 
+        fames ac turpis egestas. Morbi ac cursus nulla. Sed malesuada, nisi et sodales 
+        pretium, dui dolor dignissim leo, at hendrerit nisl orci non ligula. In egestas 
+        libero vel ullamcorper pulvinar. Nunc eu ipsum tortor. Vestibulum eget rhoncus 
+        quam, nec vehicula leo. Maecenas posuere nec lorem ac ullamcorper. In hac 
+        habitasse platea dictumst. Fusce aliquet semper est non dictum. Nam nisi massa, 
+        accumsan in pulvinar molestie, vehicula sed eros. Praesent iaculis, purus id 
+        efficitur pulvinar, arcu augue cursus metus, nec placerat dolor neque tristique 
+        ante. Vestibulum rhoncus volutpat tempor.
+    </p>
+    <h3 class="display-5">Education</h3>
+    <hr class="my-4">
+    <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, 
+        diam.
+    </p>
+    <h3 class="display-5">Experience</h3>
+    <hr class="my-4">
+    <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, 
+        diam.
+    </p>
+    <h3 class="display-5">Skills</h3>
+    <hr class="my-4">
+    <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus, 
+        diam.
+    </p>
+    <hr class="my-4">
+    <a class="btn btn-secondary" href="{% url 'contact' %}" role="button">Contact Me</a>
 </div>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Freelancer - Start Bootstrap Theme</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'rcworldd/css/styles.css' %}" rel="stylesheet"/>
+    </head>
+    
+    <hr class="my-4">
+    <h1 class="display-4">Photography</h1>
+    <hr class="my-4">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="{% static 'rcworldd/images/nature1.jpg' %}" class="d-block w-100" alt="" width="100" height="600">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'rcworldd/images/realnature2.jpg' %}" class="d-block w-100" alt="" width="100" height="600">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'rcworldd/images/nature3.jpg' %}" class="d-block w-100" alt="" width="100" height="600">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>
+<hr class="my-4">
+<h1 class="display-4">Articles</h1>
+<hr class="my-4">
 {% endblock %}
